Style the scrollbar and fix content alignment

--- a/src/utils/global/ambassadorCard/ambassadorCard.module.scss
+++ b/src/utils/global/ambassadorCard/ambassadorCard.module.scss
@@ -7,7 +7,7 @@
   max-height: 100%;
 
   justify-content: start;
-  align-items: baseline;
+  align-items: start;
   background-color: $accent-color;
   border: 0.5rem solid $primary-color;
   border-radius: 1rem;
@@ -101,6 +101,22 @@
   .scrollable {
     flex: 1 1 auto;
     overflow-y: auto;
+    margin-right: 1px;
+    scrollbar-color: $primary-color $accent-color;
+
+    &::-webkit-scrollbar {
+      width: 0.4rem;
+      height: 0.4rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: $primary-color;
+      border-radius: 0.4rem;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: $accent-color;
+    }
   }
 }
 
